chore: remove harness specific elements